<resources>
    <string name="app_name">TOODIT</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="email">E-mail</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_name">Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">Email / Mobile No</string>
    <string name="btn_login">GO</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="menu_home">Home</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_settings">Settings</string>
    <string name="text_notification">Text Notification</string>
    <string name="text_findmore">FIND MORE</string>
    <string name="text_outlet_title">MGF Mall, Gurgaon, NCR</string>
    <string name="text_edit_profile">EDIT PROFILE</string>
    <string name="text_logout">LOGOUT</string>
    <string name="text_name_placeholder">Priyank Doshi</string>
    <string name="text_location_placeholder">San Francisco, CA</string>

    <!--Profile  Strings -->
    <string name="text_profile_title_order">My Orders</string>
    <string name="text_profile_title_notification">Notifications</string>
    <string name="text_profile_title_privacy">Privacy Policy</string>
    <string name="text_profile_title_tc">Terms and Conditions</string>

    <!-- Network Connection Error-->
    <string name="text_network_msg">Please check your network connection...</string>
    <string name="text_network_title">Network Error</string>


    <!-- Google Error -->
    <string name="text_google_error_msg">Unable to Sign in through Google... Please try again later..</string>
    <string name="text_google_error_title">Google Error</string>

    <!--Validation Messages-->

    <string name="text_username_empty_title">User Error</string>
    <string name="text_username_invalid_msg">Please enter valid Email or Mobile No</string>
    <string name="text_username_password_empty_msg">Username or Password cannot be empty</string>

    <!-- Registration Error -->
    <string name="text_authentication_failure_title">Authentication Failed</string>
    <string name="text_authentication_failure_msg">Username or Password does not match...</string>
    <string name="text_registration_failed">Registration step one failed...</string>


    <!-- acitvity_registration layout Labels -->
    <string name="text_name_label"></string>
    <!--Registration Country State city-->
    <string name="text_country">Country *</string>
    <string name="text_state">State *</string>
    <string name="text_city">City *</string>

    <!-- activity_payment layout Labels -->

    <string name="to_toodoit_incorp_merchant">to toodoit incorp merchant</string>
    <string name="total_amt_payable">Total Amount Payable</string>
    <!--For print rupee symbol -->
    <string name="Rs">\u20B9</string>
    <!-- For print Rs text: -->
    <string name="rs">\u20A8.</string>
    <string name="choose_payment_method">Choose payment method</string>
    <string name="debit_card">Debit Card</string>
    <string name="credit_card">Credit Card</string>
    <string name="net_banking">Net Banking</string>
    <string name="cash">Cash</string>
    <string name="my_fragment_title">Payment</string>
    <string name="title_activity_base">BaseActivity</string>

    <!--hint size-->
    <string name="edittext_hint"><font size="10">Write your review here</font></string>

    <string name="outlet_list_url">http://food.swatinfosystem.com/api/Outlet_list</string>

    <!--cart fragments layout label-->
    <string name="hint_customise_edittext"><font size="11">Remarks e.g. Less spicy, more onions</font></string>
    <string name="done">Done</string>
    <string-array name="quantity_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string name="title_activity_location">LocationActivity</string>


</resources>
