<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_payment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@color/payment_layout_bg"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lognsys.toodit.fragment.PaymentFragment">

    <LinearLayout
        android:id="@+id/linearTotalAmountContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="5dp"
        android:background="@color/payment_background_color"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_weight="0.3"
                android:textColor="@color/black"
                android:singleLine="true"
                android:text="@string/total_amt_payable"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_price"
                android:layout_width="match_parent"
                android:layout_weight="0.7"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center"
            android:textColor="@color/black"
            android:layout_marginLeft="5dip"
            android:layout_marginBottom="15dip"
            android:text="@string/to_toodoit_incorp_merchant"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearChoosePaymentContainer"
        android:layout_below="@+id/linearTotalAmountContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dip"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:textColor="@color/black"
            android:text="@string/choose_payment_method"
            android:textSize="12sp" />
        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:layout_gravity="left|center"
            android:weightSum="1"
            android:id="@+id/rgContainer">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/debit_card"
                android:id="@+id/rbDebitCard"
                android:background="@color/payment_background_color"
                android:layout_margin="2dip"
                android:layout_gravity="left|center"
                android:checked="true"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/credit_card"
                android:id="@+id/rbCreditCard"
                android:background="@color/payment_background_color"
                android:layout_margin="2dip"
                android:textColor="@color/black"
                android:layout_gravity="left|center"
                android:checked="false"
                android:textSize="16sp" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/net_banking"
                android:id="@+id/rbNetBanking"
                android:layout_gravity="left|center"
                android:checked="false"
                android:background="@color/payment_background_color"
                android:layout_margin="2dip"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cash"
                android:id="@+id/rbCash"
                android:background="@color/payment_background_color"
                android:layout_margin="2dip"
                android:layout_gravity="left|center"
                android:checked="false"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_below="@+id/linearChoosePaymentContainer"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/btnProceed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_btn_blue"
            android:text="PROCEED"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>


</RelativeLayout>
