<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.lognsys.toodit.fragment.SettingFragment">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_weight="1"
        android:background="@drawable/background_wallpaper">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:paddingTop="30dp"
            android:src="@drawable/profile"
            app:civ_border_color="#FFFFFF"
            app:civ_border_width="2dp" />

        <LinearLayout
            android:id="@+id/profile_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/settings_buttons"
            android:orientation="vertical"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/text_name_placeholder"
                android:textColor="@android:color/white"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/text_location_placeholder"
                android:textColor="@android:color/white"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/settings_buttons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingBottom="10dp">

            <Button
                android:id="@+id/edit_profile"
                style="?android:textAppearanceSmall"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/round_btn"
                android:backgroundTint="@android:color/holo_red_dark"
                android:layout_margin="5dp"
                android:text="@string/text_edit_profile"
                android:textColor="@android:color/white" />


            <Button
                android:id="@+id/logout"
                style="?android:textAppearanceSmall"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/color_button"
                android:text="@string/text_logout"
                android:textColor="@android:color/holo_red_dark"
                android:layout_margin="5dp"></Button>
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ListView
            android:id="@+id/list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />
    </LinearLayout>


</LinearLayout>
