<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"


    tools:context="com.lognsys.toodit.LoginActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/login_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">


        <ImageView
            android:layout_width="@dimen/logo_w"
            android:layout_height="@dimen/logo_h"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="35dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/toodit_logo_1" />


        <android.support.design.widget.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:focusableInTouchMode="true"
                android:gravity="center_horizontal"
                android:hint="@string/hint_name"
                android:imeActionId="@+id/login"
                android:imeOptions="actionUnspecified"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textColor="@android:color/white" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:layout_marginBottom="15dp">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:gravity="center_horizontal"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@android:color/white" />

        </android.support.design.widget.TextInputLayout>

        <!--<android.support.design.widget.TextInputLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->

        <!--<EditText-->
        <!--android:id="@+id/password"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:focusableInTouchMode="true"-->
        <!--android:hint="@string/hint_password"-->
        <!--android:imeActionId="@+id/login"-->
        <!--android:imeOptions="actionUnspecified"-->
        <!--android:inputType="textPassword"-->
        <!--android:maxLines="1"-->
        <!--android:singleLine="true"-->
        <!--android:textColor="@android:color/white" />-->

        <!--</android.support.design.widget.TextInputLayout>-->

        <Button
            android:id="@+id/sign_in_button"
            style="?android:textAppearanceMedium"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/round_btn"
            android:text="@string/btn_login"
            android:textColor="@android:color/holo_red_dark"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="OR"
            android:textColor="@color/white"
            android:textSize="17dp" />

        <RelativeLayout
            android:layout_width="226dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <ImageView
                android:id="@+id/fb_image"
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:layout_alignParentLeft="true"
                android:scaleType="fitStart"
                android:src="@drawable/fb" />

            <ImageView
                android:id="@+id/google_image"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_alignParentRight="true"
                android:scaleType="fitStart"
                android:src="@drawable/google" />
        </RelativeLayout>


        <!--<Button-->
        <!--android:id="@+id/btn_reset_password"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="20dip"-->
        <!--android:background="@null"-->
        <!--android:text="@string/btn_forgot_password"-->
        <!--android:textAllCaps="false"-->
        <!--android:textColor="@color/colorAccent" />-->

        <!-- Link to Login Screen -->

        <!--<Button-->
        <!--android:id="@+id/sign_in_button"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="20dip"-->
        <!--android:background="@null"-->
        <!--android:text="@string/btn_link_to_login"-->
        <!--android:textAllCaps="false"-->
        <!--android:textColor="@color/white"-->
        <!--android:textSize="15dp" />-->
    </LinearLayout>

    <!--<ProgressBar-->
        <!--android:id="@+id/progressBar"-->
        <!--android:layout_width="30dp"-->
        <!--android:layout_height="30dp"-->
        <!--android:layout_gravity="center|bottom"-->
        <!--android:layout_marginBottom="20dp"-->
        <!--android:visibility="gone" />-->



</android.support.design.widget.CoordinatorLayout>

